// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Babel: cjs 1`] = `
"/*! esnext v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

require('core-js/modules/es.array.includes');
require('core-js/modules/es.array.iterator');
require('core-js/modules/es.object.assign');
require('core-js/modules/es.object.to-string');
require('core-js/modules/es.promise');
require('core-js/modules/es.set');
require('core-js/modules/es.string.iterator');
require('core-js/modules/web.dom-collections.iterator');
var _inheritsLoose = _interopDefault(require('@babel/runtime/helpers/inheritsLoose'));
var lodash = require('lodash');

console.log(\\"CherryPick Import Lodash:\\", lodash.camelCase(\\"hello world\\") === \\"helloWorld\\");
console.log(\\"Package\\", \\"esnext\\");
console.log(\\"Target\\", \\"lib\\");
console.log(\\"ES2016 Enabled:\\", Math.pow(2, 2) === 4);
new Promise(function (resolve, reject) {
  resolve(\\"resolved\\");
}).then(function (first) {
  console.log(\\"Promise:\\", first);
});
var CONSTANT = 123;
console.log(\\"Constant:\\", CONSTANT);
var myArray = [1, 2, 3];
console.log(\\"Supports Array.includes?:\\", myArray.includes && myArray.includes(2));
var mySet = new Set(myArray);
console.log(\\"Supports Set:\\", mySet.add(4));

(function (supportsDefault) {
  if (supportsDefault === void 0) {
    supportsDefault = true;
  }

  console.log(\\"Supports default parameters:\\", supportsDefault);
})();
/* eslint-disable no-shadow */


var testVariable = \\"outer\\";
var _testVariable = \\"inner\\";
console.log(\\"X Value from inner scope:\\", _testVariable);
console.log(\\"X Value from outer scope:\\", testVariable);
var source = {
  first: 1,
  second: 2
};
var destructed = Object.assign({
  third: 3
}, source);
console.log(\\"Destructed:\\", destructed);

var MyClass =
/*#__PURE__*/
function () {
  function MyClass() {
    console.log(\\"Called constructor\\");
    this.helper();
    this.instanceProperty = 3;
  }

  var _proto = MyClass.prototype;

  _proto.helper = function helper() {
    console.log(\\"Called helper\\");
  };

  return MyClass;
}();

var SecondClass =
/*#__PURE__*/
function (_MyClass) {
  _inheritsLoose(SecondClass, _MyClass);

  function SecondClass() {
    return _MyClass.call(this, 100) || this;
  }

  return SecondClass;
}(MyClass());

console.log(\\"Initialized class:\\", new MyClass());

function helper() {
  return new Promise(function ($return, $error) {
    return Promise.resolve(PromiseHelper()).then(function ($await_1) {
      try {
        return $return(42);
      } catch ($boundEx) {
        return $error($boundEx);
      }
    }, $error);
  });
}

helper();
//# sourceMappingURL=index.cjs.js.map
"
`;

exports[`Publish Test File via Babel: esm 1`] = `
"/*! esnext v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
import 'core-js/modules/es.array.includes';
import 'core-js/modules/es.array.iterator';
import 'core-js/modules/es.object.assign';
import 'core-js/modules/es.object.to-string';
import 'core-js/modules/es.promise';
import 'core-js/modules/es.set';
import 'core-js/modules/es.string.iterator';
import 'core-js/modules/web.dom-collections.iterator';
import _inheritsLoose from '@babel/runtime/helpers/inheritsLoose';
import { camelCase } from 'lodash';

console.log(\\"CherryPick Import Lodash:\\", camelCase(\\"hello world\\") === \\"helloWorld\\");
console.log(\\"Package\\", \\"esnext\\");
console.log(\\"Target\\", \\"lib\\");
console.log(\\"ES2016 Enabled:\\", Math.pow(2, 2) === 4);
new Promise(function (resolve, reject) {
  resolve(\\"resolved\\");
}).then(function (first) {
  console.log(\\"Promise:\\", first);
});
var CONSTANT = 123;
console.log(\\"Constant:\\", CONSTANT);
var myArray = [1, 2, 3];
console.log(\\"Supports Array.includes?:\\", myArray.includes && myArray.includes(2));
var mySet = new Set(myArray);
console.log(\\"Supports Set:\\", mySet.add(4));

(function (supportsDefault) {
  if (supportsDefault === void 0) {
    supportsDefault = true;
  }

  console.log(\\"Supports default parameters:\\", supportsDefault);
})();
/* eslint-disable no-shadow */


var testVariable = \\"outer\\";
var _testVariable = \\"inner\\";
console.log(\\"X Value from inner scope:\\", _testVariable);
console.log(\\"X Value from outer scope:\\", testVariable);
var source = {
  first: 1,
  second: 2
};
var destructed = Object.assign({
  third: 3
}, source);
console.log(\\"Destructed:\\", destructed);

var MyClass =
/*#__PURE__*/
function () {
  function MyClass() {
    console.log(\\"Called constructor\\");
    this.helper();
    this.instanceProperty = 3;
  }

  var _proto = MyClass.prototype;

  _proto.helper = function helper() {
    console.log(\\"Called helper\\");
  };

  return MyClass;
}();

var SecondClass =
/*#__PURE__*/
function (_MyClass) {
  _inheritsLoose(SecondClass, _MyClass);

  function SecondClass() {
    return _MyClass.call(this, 100) || this;
  }

  return SecondClass;
}(MyClass());

console.log(\\"Initialized class:\\", new MyClass());

function helper() {
  return new Promise(function ($return, $error) {
    return Promise.resolve(PromiseHelper()).then(function ($await_1) {
      try {
        return $return(42);
      } catch ($boundEx) {
        return $error($boundEx);
      }
    }, $error);
  });
}

helper();
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`Publish Test File via Babel: umd 1`] = `
"/*! esnext v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(require('core-js/modules/es.array.includes'), require('core-js/modules/es.array.iterator'), require('core-js/modules/es.object.assign'), require('core-js/modules/es.object.to-string'), require('core-js/modules/es.promise'), require('core-js/modules/es.set'), require('core-js/modules/es.string.iterator'), require('core-js/modules/web.dom-collections.iterator'), require('lodash')) :
  typeof define === 'function' && define.amd ? define(['core-js/modules/es.array.includes', 'core-js/modules/es.array.iterator', 'core-js/modules/es.object.assign', 'core-js/modules/es.object.to-string', 'core-js/modules/es.promise', 'core-js/modules/es.set', 'core-js/modules/es.string.iterator', 'core-js/modules/web.dom-collections.iterator', 'lodash'], factory) :
  (global = global || self, factory(null, null, null, null, null, null, null, null, global.lodash));
}(this, (function (es_array_includes, es_array_iterator, es_object_assign, es_object_toString, es_promise, es_set, es_string_iterator, web_domCollections_iterator, lodash) { 'use strict';

  function _inheritsLoose(subClass, superClass) {
    subClass.prototype = Object.create(superClass.prototype);
    subClass.prototype.constructor = subClass;
    subClass.__proto__ = superClass;
  }

  console.log(\\"CherryPick Import Lodash:\\", lodash.camelCase(\\"hello world\\") === \\"helloWorld\\");
  console.log(\\"Package\\", \\"esnext\\");
  console.log(\\"Target\\", \\"lib\\");
  console.log(\\"ES2016 Enabled:\\", Math.pow(2, 2) === 4);
  new Promise(function (resolve, reject) {
    resolve(\\"resolved\\");
  }).then(function (first) {
    console.log(\\"Promise:\\", first);
  });
  var CONSTANT = 123;
  console.log(\\"Constant:\\", CONSTANT);
  var myArray = [1, 2, 3];
  console.log(\\"Supports Array.includes?:\\", myArray.includes && myArray.includes(2));
  var mySet = new Set(myArray);
  console.log(\\"Supports Set:\\", mySet.add(4));

  (function (supportsDefault) {
    if (supportsDefault === void 0) {
      supportsDefault = true;
    }

    console.log(\\"Supports default parameters:\\", supportsDefault);
  })();
  /* eslint-disable no-shadow */


  var testVariable = \\"outer\\";
  var _testVariable = \\"inner\\";
  console.log(\\"X Value from inner scope:\\", _testVariable);
  console.log(\\"X Value from outer scope:\\", testVariable);
  var source = {
    first: 1,
    second: 2
  };
  var destructed = Object.assign({
    third: 3
  }, source);
  console.log(\\"Destructed:\\", destructed);

  var MyClass =
  /*#__PURE__*/
  function () {
    function MyClass() {
      console.log(\\"Called constructor\\");
      this.helper();
      this.instanceProperty = 3;
    }

    var _proto = MyClass.prototype;

    _proto.helper = function helper() {
      console.log(\\"Called helper\\");
    };

    return MyClass;
  }();

  var SecondClass =
  /*#__PURE__*/
  function (_MyClass) {
    _inheritsLoose(SecondClass, _MyClass);

    function SecondClass() {
      return _MyClass.call(this, 100) || this;
    }

    return SecondClass;
  }(MyClass());

  console.log(\\"Initialized class:\\", new MyClass());

  function helper() {
    return new Promise(function ($return, $error) {
      return Promise.resolve(PromiseHelper()).then(function ($await_1) {
        try {
          return $return(42);
        } catch ($boundEx) {
          return $error($boundEx);
        }
      }, $error);
    });
  }

  helper();

})));
//# sourceMappingURL=index.umd.js.map
"
`;
